--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^3.0.1
   splashscreen: ^1.3.5
   flutter_signin_button: ^2.0.0
+  http: ^0.13.3
 
 
 dev_dependencies:
